Milestone3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    AT_SIGN
    HASH
    LEFTARROW
    LOTBOUND
    NEWLINE
    RESERVED_CATCH
    RESERVED_FALSE
    RESERVED_FINALLY
    RESERVED_FORSOME
    RESERVED_IMPLICIT
    RESERVED_LAZY
    RESERVED_OVERRIDE
    RESERVED_PUBLIC
    RESERVED_SEALED
    RESERVED_SUPER
    RESERVED_SWITCH
    RESERVED_THROW
    RESERVED_TRAIT
    RESERVED_TRUE
    RESERVED_TRY
    RESERVED_TYPE
    RESERVED_WITH
    RESERVED_YIELD
    SCOMMENT
    TYPE_ANY
    TYPE_ANYREF
    TYPE_BYTE
    TYPE_DOUBLE
    TYPE_LONG
    TYPE_NOTHING
    TYPE_NULL
    TYPE_SHORT
    TYPE_UNIT
    UPTBOUND
    VIEWBOUND

Grammar

Rule 0     S' -> S
Rule 1     S -> compilation_unit
Rule 2     compilation_unit -> compilation_unit_0 top_stat_seq
Rule 3     compilation_unit_0 -> epsilon
Rule 4     compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id sep
Rule 5     compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id
Rule 6     top_stat_seq -> epsilon
Rule 7     top_stat_seq -> top_stat_seq top_stat sep
Rule 8     top_stat_seq -> top_stat_seq top_stat
Rule 9     top_stat -> local_modifier_0 tmpl_def
Rule 10    top_stat -> import
Rule 11    import -> RESERVED_IMPORT import_expr import_0
Rule 12    import_0 -> COMMA import_expr import_0
Rule 13    import_0 -> epsilon
Rule 14    import_expr -> path
Rule 15    modifier_0 -> modifier
Rule 16    modifier_0 -> modifier_0 modifier
Rule 17    modifier -> local_modifier
Rule 18    modifier -> access_modifier
Rule 19    local_modifier_0 -> epsilon
Rule 20    local_modifier_0 -> local_modifier_0 local_modifier
Rule 21    local_modifier -> RESERVED_FINAL
Rule 22    local_modifier -> RESERVED_ABSTRACT
Rule 23    access_modifier -> RESERVED_PRIVATE
Rule 24    access_modifier -> RESERVED_PROTECTED
Rule 25    tmpl_def -> RESERVED_CLASS class_def
Rule 26    tmpl_def -> RESERVED_OBJECT object_def
Rule 27    class_def -> id cmark class_param_clause class_template_opt
Rule 28    cmark -> epsilon
Rule 29    class_param_clause -> LPARAN class_params RPARAN
Rule 30    class_params -> epsilon
Rule 31    class_params -> class_param class_param_0
Rule 32    class_param_0 -> epsilon
Rule 33    class_param_0 -> COMMA class_param class_param_0
Rule 34    class_param -> val_var_1 id COLON type eq_expr_1
Rule 35    val_var_1 -> val_var
Rule 36    val_var_1 -> epsilon
Rule 37    val_var -> RESERVED_VAL
Rule 38    val_var -> RESERVED_VAR
Rule 39    eq_expr_1 -> EQ_ASGN expr
Rule 40    eq_expr_1 -> epsilon
Rule 41    class_template_opt -> class_template_opt_1 template_body
Rule 42    class_template_opt_1 -> RESERVED_EXTENDS id
Rule 43    class_template_opt_1 -> epsilon
Rule 44    template_body -> LCURLYB template_body_0 RCURLYB
Rule 45    template_body_0 -> epsilon
Rule 46    template_body_0 -> template_body_0 template_stat sep
Rule 47    template_body_0 -> template_body_0 template_stat
Rule 48    template_stat -> def
Rule 49    template_stat -> dcl
Rule 50    template_stat -> modifier_0 def
Rule 51    template_stat -> modifier_0 dcl
Rule 52    def -> path_var_def
Rule 53    def -> RESERVED_DEF fun_def
Rule 54    def -> tmpl_def
Rule 55    path_var_def -> RESERVED_VAR var_def
Rule 56    path_var_def -> RESERVED_VAL val_def
Rule 57    var_def -> id COLON type EQ_ASGN val_var_init
Rule 58    var_def -> id EQ_ASGN val_var_init
Rule 59    array_size -> LPARAN ints RPARAN
Rule 60    ints -> INT
Rule 61    ints -> INT COMMA ints
Rule 62    val_def -> id COLON type EQ_ASGN val_var_init
Rule 63    val_def -> id EQ_ASGN val_var_init
Rule 64    val_var_init -> array_init
Rule 65    val_var_init -> infix_expr
Rule 66    array_init -> LCURLYB epsilon RCURLYB
Rule 67    array_init -> LCURLYB array_init_0 RCURLYB
Rule 68    array_init -> TYPE_ARRAY LPARAN array_init_0 RPARAN
Rule 69    array_init_0 -> val_var_init
Rule 70    array_init_0 -> array_init_0 COMMA val_var_init
Rule 71    fun_def -> fun_sig col_type_1 EQ_ASGN LCURLYB block RCURLYB
Rule 72    col_type_1 -> COLON type
Rule 73    col_type_1 -> epsilon
Rule 74    fun_sig -> id fmark param_clause
Rule 75    fmark -> epsilon
Rule 76    param_clause -> LPARAN epsilon RPARAN
Rule 77    param_clause -> LPARAN params RPARAN
Rule 78    params -> param
Rule 79    params -> params COMMA param
Rule 80    param -> RESERVED_VAR id COLON type EQ_ASGN val_var_init
Rule 81    param -> RESERVED_VAR id COLON type
Rule 82    param -> id COLON type EQ_ASGN val_var_init
Rule 83    param -> id COLON type
Rule 84    dcl -> RESERVED_VAL val_dcl
Rule 85    dcl -> RESERVED_VAR var_dcl
Rule 86    dcl -> RESERVED_DEF fun_dcl
Rule 87    val_dcl -> id COLON type val_dcl_0
Rule 88    val_dcl_0 -> epsilon
Rule 89    val_dcl_0 -> COMMA val_dcl
Rule 90    var_dcl -> id COLON type
Rule 91    fun_dcl -> id f_dcl_mark param_clause LCURLYB COLON type RCURLYB
Rule 92    f_dcl_mark -> epsilon
Rule 93    path -> id
Rule 94    path -> RESERVED_THIS
Rule 95    path -> path DOT id
Rule 96    block_stat -> def
Rule 97    block_stat -> dcl
Rule 98    block_stat -> expr
Rule 99    block -> epsilon
Rule 100   block -> block_stat sep block
Rule 101   simple_expr -> RESERVED_NEW class_template
Rule 102   simple_expr -> simple_expr1
Rule 103   class_template -> id class_template_1
Rule 104   class_template_1 -> LPARAN id class_template_0 RPARAN
Rule 105   class_template_1 -> LPARAN literal class_template_0 RPARAN
Rule 106   class_template_1 -> LPARAN RPARAN
Rule 107   class_template_0 -> COMMA id class_template_0
Rule 108   class_template_0 -> COMMA literal class_template_0
Rule 109   class_template_0 -> epsilon
Rule 110   simple_expr1 -> literal
Rule 111   simple_expr1 -> id LSQRB access RSQRB
Rule 112   simple_expr1 -> path
Rule 113   simple_expr1 -> LPARAN exprs_1 RPARAN
Rule 114   simple_expr1 -> func_call
Rule 115   simple_expr1 -> id RESERVED_MATCH switch_block
Rule 116   func_call -> path argument_exprs
Rule 117   prefix_expr -> simple_expr
Rule 118   prefix_expr -> OP_SUB infix_expr
Rule 119   prefix_expr -> OP_ADD infix_expr
Rule 120   prefix_expr -> OP_NOT infix_expr
Rule 121   type -> basic_type
Rule 122   type -> array_type
Rule 123   array_type -> TYPE_ARRAY LSQRB type RSQRB array_size
Rule 124   array_type -> TYPE_ARRAY LSQRB type RSQRB
Rule 125   sep -> SEMI_COLON
Rule 126   sep -> epsilon
Rule 127   qual_id -> id
Rule 128   qual_id -> qual_id DOT id
Rule 129   object_def -> id objmark class_template_opt
Rule 130   objmark -> epsilon
Rule 131   for_logic -> LPARAN for_init sep infix_expr sep for_upd
Rule 132   for_init -> epsilon
Rule 133   for_init -> path_var_def for_inits
Rule 134   for_init -> var_dcl for_inits
Rule 135   for_init -> infix_expr for_inits
Rule 136   for_inits -> COMMA for_inits
Rule 137   for_inits -> for_init
Rule 138   for_upd -> RPARAN
Rule 139   for_upd -> infix_expr RPARAN
Rule 140   switch_labels -> RESERVED_CASE literal RIGHTARROW
Rule 141   switch_labels -> RESERVED_DEFAULT RIGHTARROW
Rule 142   switch_labels -> RESERVED_CASE RESERVED__ RIGHTARROW
Rule 143   switch_block_statements -> switch_labels LCURLYB block RCURLYB sep
Rule 144   switch_block_statements -> switch_labels LCURLYB block RCURLYB
Rule 145   switch_block_statements -> switch_labels val_var_init
Rule 146   switch_block -> LCURLYB switch_block_statements_0 RCURLYB
Rule 147   switch_block_statements_0 -> switch_block_statements
Rule 148   switch_block_statements_0 -> switch_block_statements_0 switch_block_statements
Rule 149   expr -> RESERVED_IF LPARAN postfix_expr RPARAN if_b_m LCURLYB block RCURLYB if_s_m else_expression if_e_m
Rule 150   expr -> RESERVED_WHILE LPARAN wh_i_m postfix_expr RPARAN wh_b_m LCURLYB block wh_s_m RCURLYB wh_e_m
Rule 151   expr -> RESERVED_DO LCURLYB do_b_m block RCURLYB do_i_m RESERVED_WHILE LPARAN postfix_expr RPARAN do_s_m
Rule 152   expr -> RESERVED_FOR for_logic LCURLYB block RCURLYB
Rule 153   expr -> RESERVED_RETURN postfix_expr
Rule 154   expr -> RESERVED_RETURN
Rule 155   expr -> RESERVED_BREAK
Rule 156   expr -> RESERVED_CONTINUE
Rule 157   expr -> postfix_expr
Rule 158   expr -> id RESERVED_MATCH switch_block
Rule 159   wh_i_m -> epsilon
Rule 160   wh_b_m -> epsilon
Rule 161   wh_s_m -> epsilon
Rule 162   wh_e_m -> epsilon
Rule 163   if_b_m -> epsilon
Rule 164   if_s_m -> epsilon
Rule 165   if_i_m -> epsilon
Rule 166   if_i1_m -> epsilon
Rule 167   if_e_m -> epsilon
Rule 168   do_b_m -> epsilon
Rule 169   do_i_m -> epsilon
Rule 170   do_s_m -> epsilon
Rule 171   else_expression -> RESERVED_ELSE if_i_m LCURLYB block RCURLYB if_is_m
Rule 172   else_expression -> if_i1_m
Rule 173   if_is_m -> epsilon
Rule 174   argument_exprs -> LPARAN exprs_1 RPARAN
Rule 175   exprs_1 -> postfix_expr
Rule 176   exprs_1 -> epsilon
Rule 177   exprs_1 -> exprs_1 COMMA postfix_expr
Rule 178   postfix_expr -> infix_expr id_1
Rule 179   postfix_expr -> infix_expr
Rule 180   id_1 -> id
Rule 181   id_1 -> id_1 id
Rule 182   infix_expr -> assign
Rule 183   infix_expr -> or_expression
Rule 184   assign -> simple_expr1 asgn or_expression
Rule 185   or_expression -> and_expression
Rule 186   or_expression -> or_expression OP_OR and_expression
Rule 187   xor_expression -> and_expression
Rule 188   xor_expression -> xor_expression OP_XOR and_expression
Rule 189   and_expression -> bit_or_expression
Rule 190   and_expression -> and_expression OP_AND bit_or_expression
Rule 191   bit_or_expression -> bit_and_expression
Rule 192   bit_or_expression -> bit_or_expression LO_OR bit_and_expression
Rule 193   bit_and_expression -> eq_expression
Rule 194   bit_and_expression -> bit_and_expression LO_AND eq_expression
Rule 195   eq_expression -> comp_expression
Rule 196   eq_expression -> eq_expression EQ comp_expression
Rule 197   eq_expression -> eq_expression NEQ comp_expression
Rule 198   comp_expression -> shift_expression
Rule 199   comp_expression -> comp_expression LEQ shift_expression
Rule 200   comp_expression -> comp_expression LT shift_expression
Rule 201   comp_expression -> comp_expression GEQ shift_expression
Rule 202   comp_expression -> comp_expression GT shift_expression
Rule 203   shift_expression -> add_expression
Rule 204   shift_expression -> shift_expression OP_RSHIFT add_expression
Rule 205   shift_expression -> shift_expression OP_LSHIFT add_expression
Rule 206   shift_expression -> shift_expression OP_RRSHIFT add_expression
Rule 207   add_expression -> mul_expression
Rule 208   add_expression -> add_expression OP_ADD mul_expression
Rule 209   add_expression -> add_expression OP_SUB mul_expression
Rule 210   mul_expression -> unary_expression
Rule 211   mul_expression -> mul_expression OP_MOD unary_expression
Rule 212   mul_expression -> mul_expression OP_MULT unary_expression
Rule 213   mul_expression -> mul_expression OP_DIVIDE unary_expression
Rule 214   unary_expression -> prefix_expr
Rule 215   unary_expression -> LPARAN infix_expr RPARAN
Rule 216   asgn -> EQ_ASGN
Rule 217   asgn -> ADD_ASGN
Rule 218   asgn -> SUB_ASGN
Rule 219   asgn -> MULT_ASGN
Rule 220   asgn -> DIV_ASGN
Rule 221   asgn -> MOD_ASGN
Rule 222   asgn -> LSHIFT_ASGN
Rule 223   asgn -> RSHIFT_ASGN
Rule 224   asgn -> AND_ASGN
Rule 225   asgn -> OR_ASGN
Rule 226   asgn -> XOR_ASGN
Rule 227   basic_type -> TYPE_INT
Rule 228   basic_type -> TYPE_FLOAT
Rule 229   basic_type -> TYPE_CHAR
Rule 230   basic_type -> TYPE_STRING
Rule 231   basic_type -> TYPE_BOOLEAN
Rule 232   basic_type -> RESERVED_NULL
Rule 233   id -> ID
Rule 234   access -> ID
Rule 235   access -> literal
Rule 236   access -> access COMMA ID
Rule 237   access -> access COMMA literal
Rule 238   literal -> BOOL
Rule 239   literal -> INT
Rule 240   literal -> CHAR
Rule 241   literal -> STRING
Rule 242   literal -> FLOAT
Rule 243   epsilon -> <empty>

Terminals, with rules where they appear

ADD_ASGN             : 217
AND_ASGN             : 224
ARRAY                : 
AT_SIGN              : 
BOOL                 : 238
CHAR                 : 240
COLON                : 34 57 62 72 80 81 82 83 87 90 91
COMMA                : 12 33 61 70 79 89 107 108 136 177 236 237
DIV_ASGN             : 220
DOT                  : 95 128
EQ                   : 196
EQ_ASGN              : 39 57 58 62 63 71 80 82 216
FLOAT                : 242
GEQ                  : 201
GT                   : 202
HASH                 : 
ID                   : 233 234 236
INT                  : 60 61 239
LCURLYB              : 44 66 67 71 91 143 144 146 149 150 151 152 171
LEFTARROW            : 
LEQ                  : 199
LOTBOUND             : 
LO_AND               : 194
LO_OR                : 192
LPARAN               : 29 59 68 76 77 104 105 106 113 131 149 150 151 174 215
LSHIFT_ASGN          : 222
LSQRB                : 111 123 124
LT                   : 200
MOD_ASGN             : 221
MULT_ASGN            : 219
NEQ                  : 197
NEWLINE              : 
OP_ADD               : 119 208
OP_AND               : 190
OP_DIVIDE            : 213
OP_LSHIFT            : 205
OP_MOD               : 211
OP_MULT              : 212
OP_NOT               : 120
OP_OR                : 186
OP_RRSHIFT           : 206
OP_RSHIFT            : 204
OP_SUB               : 118 209
OP_XOR               : 188
OR_ASGN              : 225
RCURLYB              : 44 66 67 71 91 143 144 146 149 150 151 152 171
RESERVED_ABSTRACT    : 22
RESERVED_BREAK       : 155
RESERVED_CASE        : 140 142
RESERVED_CATCH       : 
RESERVED_CLASS       : 25
RESERVED_CONTINUE    : 156
RESERVED_DEF         : 53 86
RESERVED_DEFAULT     : 141
RESERVED_DO          : 151
RESERVED_ELSE        : 171
RESERVED_EXTENDS     : 42
RESERVED_FALSE       : 
RESERVED_FINAL       : 21
RESERVED_FINALLY     : 
RESERVED_FOR         : 152
RESERVED_FORSOME     : 
RESERVED_IF          : 149
RESERVED_IMPLICIT    : 
RESERVED_IMPORT      : 11
RESERVED_LAZY        : 
RESERVED_MATCH       : 115 158
RESERVED_NEW         : 101
RESERVED_NULL        : 232
RESERVED_OBJECT      : 26
RESERVED_OVERRIDE    : 
RESERVED_PACKAGE     : 4 5
RESERVED_PRIVATE     : 23
RESERVED_PROTECTED   : 24
RESERVED_PUBLIC      : 
RESERVED_RETURN      : 153 154
RESERVED_SEALED      : 
RESERVED_SUPER       : 
RESERVED_SWITCH      : 
RESERVED_THIS        : 94
RESERVED_THROW       : 
RESERVED_TRAIT       : 
RESERVED_TRUE        : 
RESERVED_TRY         : 
RESERVED_TYPE        : 
RESERVED_VAL         : 37 56 84
RESERVED_VAR         : 38 55 80 81 85
RESERVED_WHILE       : 150 151
RESERVED_WITH        : 
RESERVED_YIELD       : 
RESERVED__           : 142
RIGHTARROW           : 140 141 142
RPARAN               : 29 59 68 76 77 104 105 106 113 138 139 149 150 151 174 215
RSHIFT_ASGN          : 223
RSQRB                : 111 123 124
SCOMMENT             : 
SEMI_COLON           : 125
STRING               : 241
SUB_ASGN             : 218
TYPE_ANY             : 
TYPE_ANYREF          : 
TYPE_ARRAY           : 68 123 124
TYPE_BOOLEAN         : 231
TYPE_BYTE            : 
TYPE_CHAR            : 229
TYPE_DOUBLE          : 
TYPE_FLOAT           : 228
TYPE_INT             : 227
TYPE_LONG            : 
TYPE_NOTHING         : 
TYPE_NULL            : 
TYPE_SHORT           : 
TYPE_STRING          : 230
TYPE_UNIT            : 
UPTBOUND             : 
VIEWBOUND            : 
XOR_ASGN             : 226
error                : 

Nonterminals, with rules where they appear

S                    : 0
access               : 111 236 237
access_modifier      : 18
add_expression       : 203 204 205 206 208 209
and_expression       : 185 186 187 188 190
argument_exprs       : 116
array_init           : 64
array_init_0         : 67 68 70
array_size           : 123
array_type           : 122
asgn                 : 184
assign               : 182
basic_type           : 121
bit_and_expression   : 191 192 194
bit_or_expression    : 189 190 192
block                : 71 100 143 144 149 150 151 152 171
block_stat           : 100
class_def            : 25
class_param          : 31 33
class_param_0        : 31 33
class_param_clause   : 27
class_params         : 29
class_template       : 101
class_template_0     : 104 105 107 108
class_template_1     : 103
class_template_opt   : 27 129
class_template_opt_1 : 41
cmark                : 27
col_type_1           : 71
comp_expression      : 195 196 197 199 200 201 202
compilation_unit     : 1
compilation_unit_0   : 2 4 5
dcl                  : 49 51 97
def                  : 48 50 96
do_b_m               : 151
do_i_m               : 151
do_s_m               : 151
else_expression      : 149
epsilon              : 3 6 13 19 28 30 32 36 40 43 45 66 73 75 76 88 92 99 109 126 130 132 159 160 161 162 163 164 165 166 167 168 169 170 173 176
eq_expr_1            : 34
eq_expression        : 193 194 196 197
expr                 : 39 98
exprs_1              : 113 174 177
f_dcl_mark           : 91
fmark                : 74
for_init             : 131 137
for_inits            : 133 134 135 136
for_logic            : 152
for_upd              : 131
fun_dcl              : 86
fun_def              : 53
fun_sig              : 71
func_call            : 114
id                   : 27 34 42 57 58 62 63 74 80 81 82 83 87 90 91 93 95 103 104 107 111 115 127 128 129 158 180 181
id_1                 : 178 181
if_b_m               : 149
if_e_m               : 149
if_i1_m              : 172
if_i_m               : 171
if_is_m              : 171
if_s_m               : 149
import               : 10
import_0             : 11 12
import_expr          : 11 12
infix_expr           : 65 118 119 120 131 135 139 178 179 215
ints                 : 59 61
literal              : 105 108 110 140 235 237
local_modifier       : 17 20
local_modifier_0     : 9 20
modifier             : 15 16
modifier_0           : 16 50 51
mul_expression       : 207 208 209 211 212 213
object_def           : 26
objmark              : 129
or_expression        : 183 184 186
param                : 78 79
param_clause         : 74 91
params               : 77 79
path                 : 14 95 112 116
path_var_def         : 52 133
postfix_expr         : 149 150 151 153 157 175 177
prefix_expr          : 214
qual_id              : 4 5 128
sep                  : 4 7 46 100 131 131 143
shift_expression     : 198 199 200 201 202 204 205 206
simple_expr          : 117
simple_expr1         : 102 184
switch_block         : 115 158
switch_block_statements : 147 148
switch_block_statements_0 : 146 148
switch_labels        : 143 144 145
template_body        : 41
template_body_0      : 44 46 47
template_stat        : 46 47
tmpl_def             : 9 54
top_stat             : 7 8
top_stat_seq         : 2 7 8
type                 : 34 57 62 72 80 81 82 83 87 90 91 123 124
unary_expression     : 210 211 212 213
val_dcl              : 84 89
val_dcl_0            : 87
val_def              : 56
val_var              : 35
val_var_1            : 34
val_var_init         : 57 58 62 63 69 70 80 82 145
var_dcl              : 85 134
var_def              : 55
wh_b_m               : 150
wh_e_m               : 150
wh_i_m               : 150
wh_s_m               : 150
xor_expression       : 188

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . compilation_unit
    (2) compilation_unit -> . compilation_unit_0 top_stat_seq
    (3) compilation_unit_0 -> . epsilon
    (4) compilation_unit_0 -> . compilation_unit_0 RESERVED_PACKAGE qual_id sep
    (5) compilation_unit_0 -> . compilation_unit_0 RESERVED_PACKAGE qual_id
    (243) epsilon -> .

    RESERVED_PACKAGE reduce using rule 243 (epsilon -> .)
    RESERVED_IMPORT reduce using rule 243 (epsilon -> .)
    RESERVED_CLASS  reduce using rule 243 (epsilon -> .)
    RESERVED_OBJECT reduce using rule 243 (epsilon -> .)
    RESERVED_FINAL  reduce using rule 243 (epsilon -> .)
    RESERVED_ABSTRACT reduce using rule 243 (epsilon -> .)
    $end            reduce using rule 243 (epsilon -> .)

    S                              shift and go to state 1
    compilation_unit               shift and go to state 2
    compilation_unit_0             shift and go to state 3
    epsilon                        shift and go to state 4

state 1

    (0) S' -> S .



state 2

    (1) S -> compilation_unit .

    $end            reduce using rule 1 (S -> compilation_unit .)


state 3

    (2) compilation_unit -> compilation_unit_0 . top_stat_seq
    (4) compilation_unit_0 -> compilation_unit_0 . RESERVED_PACKAGE qual_id sep
    (5) compilation_unit_0 -> compilation_unit_0 . RESERVED_PACKAGE qual_id
    (6) top_stat_seq -> . epsilon
    (7) top_stat_seq -> . top_stat_seq top_stat sep
    (8) top_stat_seq -> . top_stat_seq top_stat
    (243) epsilon -> .

    RESERVED_PACKAGE shift and go to state 6
    RESERVED_IMPORT reduce using rule 243 (epsilon -> .)
    RESERVED_CLASS  reduce using rule 243 (epsilon -> .)
    RESERVED_OBJECT reduce using rule 243 (epsilon -> .)
    RESERVED_FINAL  reduce using rule 243 (epsilon -> .)
    RESERVED_ABSTRACT reduce using rule 243 (epsilon -> .)
    $end            reduce using rule 243 (epsilon -> .)

    top_stat_seq                   shift and go to state 5
    epsilon                        shift and go to state 7

state 4

    (3) compilation_unit_0 -> epsilon .

    RESERVED_PACKAGE reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_IMPORT reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_CLASS  reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_OBJECT reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_FINAL  reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_ABSTRACT reduce using rule 3 (compilation_unit_0 -> epsilon .)
    $end            reduce using rule 3 (compilation_unit_0 -> epsilon .)


state 5

    (2) compilation_unit -> compilation_unit_0 top_stat_seq .
    (7) top_stat_seq -> top_stat_seq . top_stat sep
    (8) top_stat_seq -> top_stat_seq . top_stat
    (9) top_stat -> . local_modifier_0 tmpl_def
    (10) top_stat -> . import
    (19) local_modifier_0 -> . epsilon
    (20) local_modifier_0 -> . local_modifier_0 local_modifier
    (11) import -> . RESERVED_IMPORT import_expr import_0
    (243) epsilon -> .

    $end            reduce using rule 2 (compilation_unit -> compilation_unit_0 top_stat_seq .)
    RESERVED_IMPORT shift and go to state 12
    RESERVED_CLASS  reduce using rule 243 (epsilon -> .)
    RESERVED_OBJECT reduce using rule 243 (epsilon -> .)
    RESERVED_FINAL  reduce using rule 243 (epsilon -> .)
    RESERVED_ABSTRACT reduce using rule 243 (epsilon -> .)

    top_stat                       shift and go to state 8
    local_modifier_0               shift and go to state 9
    import                         shift and go to state 10
    epsilon                        shift and go to state 11

state 6

    (4) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE . qual_id sep
    (5) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE . qual_id
    (127) qual_id -> . id
    (128) qual_id -> . qual_id DOT id
    (233) id -> . ID

    ID              shift and go to state 15

    qual_id                        shift and go to state 13
    id                             shift and go to state 14

state 7

    (6) top_stat_seq -> epsilon .

    RESERVED_IMPORT reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_CLASS  reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_OBJECT reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_FINAL  reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_ABSTRACT reduce using rule 6 (top_stat_seq -> epsilon .)
    $end            reduce using rule 6 (top_stat_seq -> epsilon .)


state 8

    (7) top_stat_seq -> top_stat_seq top_stat . sep
    (8) top_stat_seq -> top_stat_seq top_stat .
    (125) sep -> . SEMI_COLON
    (126) sep -> . epsilon
    (243) epsilon -> .

  ! reduce/reduce conflict for RESERVED_IMPORT resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_CLASS resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_OBJECT resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_FINAL resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_ABSTRACT resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for $end resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_IMPORT reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_CLASS  reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_OBJECT reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_FINAL  reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_ABSTRACT reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    $end            reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    SEMI_COLON      shift and go to state 17

  ! RESERVED_IMPORT [ reduce using rule 243 (epsilon -> .) ]
  ! RESERVED_CLASS  [ reduce using rule 243 (epsilon -> .) ]
  ! RESERVED_OBJECT [ reduce using rule 243 (epsilon -> .) ]
  ! RESERVED_FINAL  [ reduce using rule 243 (epsilon -> .) ]
  ! RESERVED_ABSTRACT [ reduce using rule 243 (epsilon -> .) ]
  ! $end            [ reduce using rule 243 (epsilon -> .) ]

    sep                            shift and go to state 16
    epsilon                        shift and go to state 18

state 9

    (9) top_stat -> local_modifier_0 . tmpl_def
    (20) local_modifier_0 -> local_modifier_0 . local_modifier
    (25) tmpl_def -> . RESERVED_CLASS class_def
    (26) tmpl_def -> . RESERVED_OBJECT object_def
    (21) local_modifier -> . RESERVED_FINAL
    (22) local_modifier -> . RESERVED_ABSTRACT

    RESERVED_CLASS  shift and go to state 21
    RESERVED_OBJECT shift and go to state 22
    RESERVED_FINAL  shift and go to state 23
    RESERVED_ABSTRACT shift and go to state 24

    tmpl_def                       shift and go to state 19
    local_modifier                 shift and go to state 20

state 10

    (10) top_stat -> import .

    SEMI_COLON      reduce using rule 10 (top_stat -> import .)
    RESERVED_IMPORT reduce using rule 10 (top_stat -> import .)
    RESERVED_CLASS  reduce using rule 10 (top_stat -> import .)
    RESERVED_OBJECT reduce using rule 10 (top_stat -> import .)
    RESERVED_FINAL  reduce using rule 10 (top_stat -> import .)
    RESERVED_ABSTRACT reduce using rule 10 (top_stat -> import .)
    $end            reduce using rule 10 (top_stat -> import .)


state 11

    (19) local_modifier_0 -> epsilon .

    RESERVED_CLASS  reduce using rule 19 (local_modifier_0 -> epsilon .)
    RESERVED_OBJECT reduce using rule 19 (local_modifier_0 -> epsilon .)
    RESERVED_FINAL  reduce using rule 19 (local_modifier_0 -> epsilon .)
    RESERVED_ABSTRACT reduce using rule 19 (local_modifier_0 -> epsilon .)


state 12

    (11) import -> RESERVED_IMPORT . import_expr import_0
    (14) import_expr -> . path
    (93) path -> . id
    (94) path -> . RESERVED_THIS
    (95) path -> . path DOT id
    (233) id -> . ID

    RESERVED_THIS   shift and go to state 28
    ID              shift and go to state 15

    import_expr                    shift and go to state 25
    path                           shift and go to state 26
    id                             shift and go to state 27

state 13

    (4) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id . sep
    (5) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .
    (128) qual_id -> qual_id . DOT id
    (125) sep -> . SEMI_COLON
    (126) sep -> . epsilon
    (243) epsilon -> .

  ! reduce/reduce conflict for RESERVED_PACKAGE resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_IMPORT resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_CLASS resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_OBJECT resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_FINAL resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_ABSTRACT resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for $end resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_PACKAGE reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_IMPORT reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_CLASS  reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_OBJECT reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_FINAL  reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_ABSTRACT reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    $end            reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    DOT             shift and go to state 30
    SEMI_COLON      shift and go to state 17
